<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="10dp"
            android:text="@string/are_you_sure_you_want_to_clear_history"
            android:textColor="@color/blueBlackDark"
            android:textSize="14sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtCancelDeleteMode"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:background="@drawable/bg_blue_radius_selector"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/blueBlackDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtOkDeleteMode"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:background="@drawable/bg_accent_radius_selector"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>