<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context="com.dichthuatjun88binh.jun88.activites.SelectLanguageActivity">

    <RelativeLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <EditText
            android:id="@+id/search_lang"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"
            android:layout_toStartOf="@+id/btnCancel"
            android:background="@drawable/bg_et"
            android:drawableStart="@drawable/ic_search_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/colorAccent"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:stateListAnimator="@null"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@drawable/button_text_color_selector"
            android:textSize="12sp" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/search_layout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp">

            <RelativeLayout
                android:id="@+id/layoutRecent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_purple_item_top">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="10dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/recently_use"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lang_recent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutRecent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:nestedScrollingEnabled="false" />

            <RelativeLayout
                android:id="@+id/layoutAllLanguages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lang_recent"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_purple_item_top">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="10dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/all_languages"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lang_rev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutAllLanguages"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:nestedScrollingEnabled="false" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>