<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="vertical"
            android:weightSum="3">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="7.5dp"
                android:paddingBottom="3dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0.2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!--<ScrollView
                        android:id="@+id/scrollView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/btnsTranslateBox"
                        android:paddingTop="2dp"
                        android:paddingBottom="5dp"
                        android:scrollbars="vertical">


                    </ScrollView>-->

                    <com.dichthuatjun88binh.jun88.views.CutCopyPasteEditText
                        android:id="@+id/source_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/btnsTranslateBox"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/inter"
                        android:gravity="top|start"
                        android:hint="@string/input_text"
                        android:imeOptions="actionDone"
                        android:inputType="none|text|textMultiLine"
                        android:paddingStart="15dp"
                        android:paddingTop="15dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="10dp"
                        android:scrollbars="vertical"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/hintTextColor"
                        android:textSize="14sp"
                        android:typeface="serif">

                    </com.dichthuatjun88binh.jun88.views.CutCopyPasteEditText>

                    <ProgressBar
                        android:id="@+id/progress_circular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="80dp"
                        android:visibility="gone" />

                    <RelativeLayout
                        android:id="@+id/btnsTranslateBox"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentBottom="true">

                        <ImageView
                            android:id="@+id/play_source"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="15dp"
                            android:background="@drawable/bg_transparent_radius_selector"
                            android:padding="4dp"
                            android:src="@drawable/speaker_icon"
                            app:tint="@color/colorAccent" />

                        <!--<View
                            android:layout_width="match_parent"
                            android:layout_height="0.2dp"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"
                            android:background="#1A000000" />-->

                        <LinearLayout
                            android:id="@+id/paste_source"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toStartOf="@id/clear"
                            android:background="@drawable/bg_transparent_radius_selector"
                            android:gravity="center"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="4dp">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_paste"
                                app:tint="@color/colorAccent" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingHorizontal="6dp"
                                android:text="@string/paste"
                                android:textColor="@color/colorAccent"
                                android:textSize="10sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/clear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="6dp"
                            android:layout_toStartOf="@id/clear"
                            android:background="@drawable/bg_transparent_radius_selector"
                            android:gravity="center"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="4dp">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_clear"
                                app:tint="@color/colorAccent" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingHorizontal="6dp"
                                android:text="@string/delete"
                                android:textColor="@color/colorAccent"
                                android:textSize="10sp" />
                        </LinearLayout>
                    </RelativeLayout>

                    <!--<Button
                        android:id="@+id/go"
                        android:layout_width="120dp"
                        android:layout_height="35dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/translate_btnbg"
                        android:drawableTint="@android:color/white"
                        android:fontFamily="@font/roboto"
                        android:text="Translate"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />-->


                </RelativeLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:paddingBottom="3dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0.2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_output_gradient">

                    <TextView
                        android:id="@+id/translated_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@id/btnsRel"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/inter"
                        android:gravity="top|start"
                        android:paddingStart="15dp"
                        android:paddingTop="15dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="15dp"
                        android:scrollbars="vertical"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:typeface="serif">

                        <requestFocus />
                    </TextView>
                    <!--<ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@id/btnsRel"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="7.5dp"
                        android:layout_marginEnd="15dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:scrollbars="vertical">


                    </ScrollView>-->


                    <RelativeLayout
                        android:id="@+id/btnsRel"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentBottom="true">

                        <!--<View
                            android:layout_width="match_parent"
                            android:layout_height="0.2dp"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"
                            android:background="#1A000000" />-->

                        <ImageView
                            android:id="@+id/play_target"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="15dp"
                            android:background="@drawable/bg_transparent_radius_selector"
                            android:padding="4dp"
                            android:src="@drawable/speaker_icon"
                            app:tint="@color/white" />

                        <LinearLayout
                            android:id="@+id/copy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toStartOf="@id/share"
                            android:background="@drawable/bg_transparent_radius_selector"
                            android:gravity="center"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="4dp">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_copy"
                                app:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingHorizontal="6dp"
                                android:text="@string/copy"
                                android:textColor="@color/white"
                                android:textSize="10sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/share"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="6dp"
                            android:background="@drawable/bg_transparent_radius_selector"
                            android:gravity="center"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="4dp">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_share"
                                app:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingHorizontal="6dp"
                                android:text="@string/share"
                                android:textColor="@color/white"
                                android:textSize="10sp" />
                        </LinearLayout>

                    </RelativeLayout>


                </RelativeLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>